# SSRNcrawler

./: .gitignore  README.md  pyproject.toml
data/arn/AnalyticalModelseJournal/: 1002681_page22_NO.8.txt  1012675_page22_NO.25.txt  1020957_page22_NO.24.txt  1024112_page22_NO.23.txt  1024141_page22_NO.22.txt  1025763_page22_NO.21.txt  1027075_page21_NO.3.txt  1028423_page22_NO.10.txt  1029680_page22_NO.19.txt  1030355_page22_NO.20.txt  1053641_page22_NO.18.txt  1071991_page21_NO.46.txt  1082513_page22_NO.17.txt  1096245_page22_NO.16.txt  1102979_page22_NO.15.txt  1103676_page22_NO.14.txt  1113649_page22_NO.31.txt  1115520_page22_NO.13.txt  1133604_page22_NO.12.txt  1138279_page22_NO.11.txt  1139977_page22_NO.9.txt  1147924_page22_NO.7.txt  1156407_page22_NO.6.txt  1160166_page22_NO.5.txt  1176442_page22_NO.4.txt  1251982_page22_NO.3.txt  1262382_page22_NO.2.txt  1266295_page21_NO.50.txt  1267235_page21_NO.49.txt  1270758_page21_NO.48.txt  1281351_page21_NO.47.txt  1292869_page21_NO.44.txt  1296803_page21_NO.43.txt  1300100_page21_NO.42.txt  1310914_page21_NO.41.txt  1325849_page21_NO.40.txt  1326089_page21_NO.39.txt  1334327_page21_NO.38.txt  1351883_page21_NO.36.txt  (+957 more)
src/backgroundcheck/: JudgeBackground.py  SaveInPNG.py  __init__.py  affiliation_cleaner.py  classifier.py  config.py  main.py  newRORjson.py  ror_index.py
src/crawler/: checkpoint.py  config.py  main.py  runner.py  scraping.py  utils.py
src/statistics/: TurnIntoCSV.py  affiliations_quantity_clarify.py  eBusiness.csv  fix_unavailable_affiliation.py  just_affiliation_txt.py  readHTML.py  readWiley.py
(+24402 files in other folders)
